<resources>
    <!-- - - - - - - - - - - - - - - - - - - - - - 앱 이름 - - - - - - - - - - - - - - - - - - - - - - -->
    <string name="app_name">fromis_9</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - Layout - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- activity_album -->
    <string name="str_activity_album_sort_release">발매일</string>
    <string name="str_activity_album_sort_title">타이틀</string>
    <string name="str_activity_album_sort_classify">분류</string>
    <!-- activity_album_song -->
    <string name="str_activity_album_song_lyricist">작사</string>
    <string name="str_activity_album_song_composer">작곡</string>
    <string name="str_activity_album_song_arranger">편곡</string>
    <string name="str_activity_album_song_lyrics">가사</string>
    <string name="str_activity_album_song_play">노래 재생</string>
    <!-- activity_introduction -->
    <string name="str_activity_introduction_debut">데뷔일</string>
    <!-- activity_settings -->
    <string name="str_activity_settings_settings">설정</string>
    <string name="str_activity_settings_darkmode">다크 모드</string>
    <string name="str_activity_settings_info">정보</string>
    <string name="str_activity_settings_version">버전</string>
    <string name="str_activity_settings_version_update">업데이트</string>
    <string name="str_activity_settings_cache">캐시</string>
    <string name="str_activity_settings_cache_clear">캐시 삭제</string>
    <string name="str_activity_settings_others">기타</string>
    <string name="str_activity_settings_license">라이선스</string>
    <string name="str_activity_settings_changelog">체인지로그</string>
    <!-- fragment_main_video -->
    <string name="str_fragment_main_video_all">전체</string>
    <string name="str_fragment_main_video_mv">뮤직비디오</string>
    <string name="str_fragment_main_video_channel9">채널나인</string>
    <string name="str_fragment_main_video_fm124">FM_1.24</string>
    <string name="str_fragment_main_video_9log">9_log</string>
    <string name="str_fragment_main_video_fromisoda">프롬이소다</string>
    <!-- fragment_main_schedule -->
    <string name="str_fragment_main_schedule_no_schedule">일정이 없습니다.</string>
    <!-- calendar_day -->
    <string name="str_calendar_day_dot">●</string>
    <!-- dialog_member -->
    <string name="str_dialog_member_birth">출생</string>
    <string name="str_dialog_member_blood">혈액형</string>
    <string name="str_dialog_member_position">포지션</string>
    <!-- dialog_changelog -->
    <string name="str_dialog_changelog_title">체인지로그</string>
    <string name="str_dialog_changelog_close">확인</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - Class - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- ActivityMain -->
    <string name="str_activity_main_press_back">뒤로 가기 버튼을 한 번 더 누르면 종료됩니다.</string>
    <!-- ActivityIntroduction -->
    <string name="str_activity_introduction_debut_dday">D+%1$s</string>
    <!-- ActivitySettings -->
    <string name="str_activity_settings_cache_mb">%1$sMB</string>
    <!-- FragmentMainVideo -->
    <string name="str_fragment_main_video_title">모든 영상</string>
    <string name="str_fragment_main_video_search">프로미스나인 영상 검색</string>
    <!-- FragmentMainSchedule -->
    <string name="str_fragment_main_schedule_calendar_title">%1$s년 %2$s월</string>
    <!-- DialogMember -->
    <string name="str_dialog_member_blood_type">%1$s형</string>

    <!-- - - - - - - - - - - - - - - - - - - - - - Menu - - - - - - - - - - - - - - - - - - - - - - -->
    <!-- menu_main_bottomnav -->
    <string name="str_menu_main_bottomnav_home">홈</string>
    <string name="str_menu_main_bottomnav_video">영상</string>
    <string name="str_menu_main_bottomnav_schedule">일정</string>
    <!-- menu_main_video_search -->
    <string name="str_menu_main_video_search">검색</string>
</resources>