<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/btnToggleGroup"
        android:layout_width="wrap_content"
        android:layout_height="56dp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:selectionRequired="true"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnRelease"
            style="@style/StyleToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/str_activity_album_sort_release"
            app:cornerRadius="4dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnTitle"
            style="@style/StyleToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/str_activity_album_sort_title" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnClassify"
            style="@style/StyleToggleButton"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/str_activity_album_sort_classify"
            app:cornerRadius="4dp" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <androidx.appcompat.widget.AppCompatImageButton
        android:id="@+id/btnSort"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:background="@android:color/transparent"
        android:tint="@color/gray"
        app:layout_constraintBottom_toBottomOf="@id/btnToggleGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnToggleGroup"
        app:layout_constraintTop_toTopOf="@+id/btnToggleGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>