<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="0dp"
                android:layout_height="?attr/actionBarSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:theme="@style/StyleToolbar" />

            <HorizontalScrollView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:fillViewport="true"
                android:scrollbars="none"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbar">

                <nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup
                    android:id="@+id/btnToggleGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    app:layout_scrollFlags="scroll|exitUntilCollapsed"
                    app:toggle_requiredAmount="1"
                    app:toggle_selectAnimation="fade">

                    <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                        android:id="@+id/btnAll"
                        style="@style/StyleThemedToggleButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        app:layout_flexShrink="0"
                        app:toggle_text="@string/str_fragment_main_video_all" />

                    <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                        android:id="@+id/btnMV"
                        style="@style/StyleThemedToggleButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        app:layout_flexShrink="0"
                        app:toggle_text="@string/str_fragment_main_video_mv" />

                    <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                        android:id="@+id/btnChannel9"
                        style="@style/StyleThemedToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        app:layout_flexShrink="0"
                        app:toggle_text="@string/str_fragment_main_video_channel9" />

                    <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                        android:id="@+id/btnFM124"
                        style="@style/StyleThemedToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        app:layout_flexShrink="0"
                        app:toggle_text="@string/str_fragment_main_video_fm124" />

                    <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                        android:id="@+id/btn9log"
                        style="@style/StyleThemedToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        app:layout_flexShrink="0"
                        app:toggle_text="@string/str_fragment_main_video_9log" />

                    <nl.bryanderidder.themedtogglebuttongroup.ThemedButton
                        android:id="@+id/btnFromisoda"
                        style="@style/StyleThemedToggleButton"
                        android:layout_width="wrap_content"
                        android:layout_height="40dp"
                        app:layout_flexShrink="0"
                        app:toggle_text="@string/str_fragment_main_video_fromisoda" />

                </nl.bryanderidder.themedtogglebuttongroup.ThemedToggleButtonGroup>

            </HorizontalScrollView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clipToPadding="false"
        app:layout_anchor="@+id/appBarLayout"
        app:layout_anchorGravity="bottom"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>