<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/drawable_dialog_rounded"
    android:paddingTop="48dp"
    android:paddingBottom="48dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgProfile"
        android:layout_width="160dp"
        android:layout_height="160dp"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/nanum_square_round_extra_bold"
        android:textColor="@color/dark_gray"
        android:textSize="24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgProfile"
        tools:text="이새롬" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/birth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nanum_square_round_extra_bold"
        android:gravity="end"
        android:text="@string/str_dialog_member_birth"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/txtBirth"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBirth"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/nanum_square_round_extra_bold"
        android:textColor="@color/dark_gray"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/birth"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/birth"
        app:layout_constraintTop_toTopOf="@+id/birth" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/blood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nanum_square_round_extra_bold"
        android:gravity="end"
        android:text="@string/str_dialog_member_blood"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/txtBlood"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/birth" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtBlood"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/nanum_square_round_extra_bold"
        android:textColor="@color/dark_gray"
        android:textSize="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/blood"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/blood"
        app:layout_constraintTop_toTopOf="@+id/blood" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/position"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:fontFamily="@font/nanum_square_round_extra_bold"
        android:gravity="end"
        android:text="@string/str_dialog_member_position"
        android:textColor="@color/gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toStartOf="@+id/txtPosition"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/blood" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtPosition"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:fontFamily="@font/nanum_square_round_extra_bold"
        android:lineSpacingExtra="12dp"
        android:textColor="@color/dark_gray"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="6"
        app:layout_constraintStart_toEndOf="@+id/position"
        app:layout_constraintTop_toTopOf="@+id/position" />

</androidx.constraintlayout.widget.ConstraintLayout>